# fastapi

1_crud/: main.py
2_crud/: main.py
3_crud_posts/: main.py
4_fastapi_orm/: .env  main.py  settings.py
fastapi_basics/: .env  pyproject.toml
fastapi_basics/fastapi_basics/: fast.py  main.py  settings.py
fastapi_lms/: .main.py.swp  main.py  pyproject.toml
